--- a/ColorCubeWithAnimation/index.html
+++ b/ColorCubeWithAnimation/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
         <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+        <script src="/node_modules/obj-file-parser/dist/OBJFile.js"></script>
     </head>
     <body>
         <canvas id="canvas"></canvas>
