--- a/ColorCubeWithAnimation/index.html
+++ b/ColorCubeWithAnimation/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
-        <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+        <script src="webgl-utils.js"></script>
+        <script src="webgl_lib.js"></script>
         <script src="/node_modules/obj-file-parser/dist/OBJFile.js"></script>
     </head>
     <body>
