--- a/ColorCubeWithAnimation/index.html
+++ b/ColorCubeWithAnimation/index.html
@@ -5,9 +5,16 @@
         <script src="webgl-utils.js"></script>
         <script src="webgl_lib.js"></script>
         <script src="/node_modules/obj-file-parser/dist/OBJFile.js"></script>
+        <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+        <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <script src="main.js"></script>
+        <div id="uiContainer">
+            <div id="ui">
+              <div id="fRotation"></div>
+            </div>
+          </div>
+        <script src="main2.js"></script>
     </body>
 </html>
