Obj file loaded and parsed

--- a/ColorCubeWithAnimation/index.html
+++ b/ColorCubeWithAnimation/index.html
@@ -9,16 +9,7 @@
         <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
-<<<<<<< HEAD
-        <div id="uiContainer">
-            <div id="ui">
-              <div id="fRotation"></div>
-            </div>
-          </div>
-        <script src="main2.js"></script>
-=======
+        <canvas id='canvas'></canvas>
         <script src="main.js" type="module"></script>
->>>>>>> a0cbedb9ed863e4c60ac561be200a783ef2035b6
     </body>
 </html>
